examples/github-organization/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-master
spec:
  template:
    spec:
      containers:
        - name: jenkins
          volumeMounts:
            - mountPath: /jenkins-customization/example
              name: jenkins-example-customization
          startupProbe:
            periodSeconds: 30
          livenessProbe:
            periodSeconds: 20
          readinessProbe:
            periodSeconds: 20
      volumes:
        - name: jenkins-example-customization
          configMap:
            name: jenkins-example-customization
