examples/github-organization/oauth-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: jenkins-example
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
spec:
  rules:
    - host: poseidon.staging.pleo.io
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins-master
              servicePort: 8080
